# workspace

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: 10_layout.ipynb  14_routing.ipynb  14_routing_electrical.ipynb  20_modesolver_fem_vary_width.ipynb  21_modesolver_fdfd.ipynb  22_heater_fem.ipynb
myamf/: Athermal_SiN_MZI_FSR10nm.py  Athremal_MZI_FSR80nm.py  Balanced_PD.py  Delay_Spiral.py  ECL1.py  ECL2.py  ECL3.py  ECL_to_WL.py  Hybrid_MMI.py  Hybrid_MMI_Balanced_PD.py  MZI_Pack2.py  MZI_Pack3.py  MZI_Ring.py  MZIs.py  MZIs_Pack.py  MZIs_Pack2.py  MZIs_Pack4.py  Main.py  Main_AMF_Die2.py  Main_AMF_Die4.py  Main_AMF_Die4.rpic.yml  PD_Single.py  Phase_Shifter.py  Rib_MZI.py  Ring_Master.py  Rings.py  Rings_Pack.py  SiN_1250_MZI.py  SiN_MZI.py  SiN_MZI_with_Hybrid_MMI_Balanced_PD.py  Si_MZI_with_Hybrid_MMI_Balanced_PD.py  Spiral_Ali.py  Spiral_Euler.py  Tunable_Coupler.py  Wavemeter.py  __init__.py  config.py  die_with_edge_couplers.py  sample_crossing_from_gds.py  sample_die.pic.yml  (+21 more)
myamf/gds/: CurrentMirror.gds  CurrentMirror_5.gds  Delay_WL.gds  FonexQuietXECL_Hybrid_V2026_3.gds  FonexQuietXECL_Hybrid_V2026_5.gds  FonexQuietXECL_InsideOut_Hybrid_V2026_2.gds  FonexQuietXECL_InsideOut_Hybrid_V2026_3.gds  FonexQuietXECL_SiN_V2026_6.gds  NeffMZIGrattoSlabRibtoStrip_Alternative_V2.gds  PolishingMarkers.gds  Ring_WL.gds  quiet_logo.gds
myamf/models/: sample_crossing_from_gds.py
myamf/samples/: sample0.py  sample1.py  sample3.py  sample4.py  sample5.py  sample6.py
myamf/schematics/: mask.pic.yml  pads.pic.yml
